--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>OpenAIApp</artifactId>
+	<artifactId>PlaceByPurpose</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>OpenAIApp</name>
+	<name>PlaceByPurpose</name>
 	<description>Demo project for Spring Boot</description>
 	<url />
 	<licenses>
@@ -71,11 +71,7 @@
 			<artifactId>service</artifactId>
 			<version>0.12.0</version>
 		</dependency>
-		<dependency>
-			<groupId>com.example</groupId>
-			<artifactId>SpringStart10</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+
 	</dependencies>
 
 	<build>
