--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<version>0.12.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.example</groupId>
+			<artifactId>SpringStart10</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
