--- a/pom.xml
+++ b/pom.xml
@@ -73,10 +73,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.example</groupId>
-			<artifactId>SpringStart10</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
